--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 Django==5.0.3
 django-jazzmin==2.6.1
+gunicorn==21.2.0
+packaging==24.0
 sqlparse==0.4.4
 tzdata==2024.1
 unicorn==2.0.1.post1
