--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,49 @@
 asgiref==3.8.1
+asttokens==2.4.1
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
 Django==5.0.3
 django-jazzmin==2.6.1
+emoji==2.11.0
+executing==2.0.1
+fonttools==4.50.0
 gunicorn==21.2.0
+ipykernel==6.29.3
+ipython==8.22.2
+jedi==0.19.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+matplotlib==3.8.3
+matplotlib-inline==0.1.6
+nest-asyncio==1.6.0
+numpy==1.26.4
 packaging==24.0
+pandas==2.2.1
+parso==0.8.3
+pillow==10.2.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+pure-eval==0.2.2
+Pygments==2.17.2
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pywin32==306
+pyzmq==25.1.2
+seaborn==0.13.2
+six==1.16.0
 sqlparse==0.4.4
+stack-data==0.6.3
+tornado==6.4
+traitlets==5.14.2
 tzdata==2024.1
 unicorn==2.0.1.post1
+wcwidth==0.2.13
 whitenoise==6.6.0
+wordcloud==1.9.3
