--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.8.1
 asttokens==2.4.1
+bleach==6.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.2.0
@@ -9,19 +12,24 @@ decorator==5.1.1
 Django==5.0.3
 django-jazzmin==2.6.1
 emoji==2.11.0
+et-xmlfile==1.1.0
 executing==2.0.1
 fonttools==4.50.0
 gunicorn==21.2.0
+idna==3.7
 ipykernel==6.29.3
 ipython==8.22.2
 jedi==0.19.1
+joblib==1.4.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+kaggle==1.6.12
 kiwisolver==1.4.5
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.6.0
 numpy==1.26.4
+openpyxl==3.1.3
 packaging==24.0
 pandas==2.2.1
 parso==0.8.3
@@ -33,16 +41,26 @@ pure-eval==0.2.2
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-slugify==8.0.4
 pytz==2024.1
+pywin32==306
 pyzmq==25.1.2
+requests==2.31.0
+scikit-learn==1.4.2
+scipy==1.13.0
 seaborn==0.13.2
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
+text-unidecode==1.3
+threadpoolctl==3.5.0
 tornado==6.4
+tqdm==4.66.4
 traitlets==5.14.2
 tzdata==2024.1
 unicorn==2.0.1.post1
+urllib3==2.2.1
 wcwidth==0.2.13
+webencodings==0.5.1
 whitenoise==6.6.0
 wordcloud==1.9.3
