--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 asttokens==2.4.1
+attrs==23.2.0
+beautifulsoup4==4.12.3
 bleach==6.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -9,29 +11,40 @@ contourpy==1.2.0
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
+defusedxml==0.7.1
 Django==5.0.3
 django-jazzmin==2.6.1
 emoji==2.11.0
 et-xmlfile==1.1.0
 executing==2.0.1
+fastjsonschema==2.20.0
 fonttools==4.50.0
 gunicorn==21.2.0
 idna==3.7
 ipykernel==6.29.3
 ipython==8.22.2
 jedi==0.19.1
+Jinja2==3.1.4
 joblib==1.4.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
 kaggle==1.6.12
 kiwisolver==1.4.5
+MarkupSafe==2.1.5
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
+mistune==3.0.2
+nbclient==0.10.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==1.26.4
 openpyxl==3.1.3
 packaging==24.0
 pandas==2.2.1
+pandocfilters==1.5.1
 parso==0.8.3
 pillow==10.2.0
 platformdirs==4.2.0
@@ -43,16 +56,21 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 pytz==2024.1
+pywin32==306
 pyzmq==25.1.2
+referencing==0.35.1
 requests==2.31.0
+rpds-py==0.18.1
 scikit-learn==1.4.2
 scipy==1.13.0
 seaborn==0.13.2
 six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
 stack-data==0.6.3
 text-unidecode==1.3
 threadpoolctl==3.5.0
+tinycss2==1.3.0
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.2
