--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+appnope==0.1.4
 asgiref==3.8.1
 asttokens==2.4.1
 attrs==23.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+cachetools==5.4.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 colorama==0.4.6
@@ -19,13 +24,26 @@ et-xmlfile==1.1.0
 executing==2.0.1
 fastjsonschema==2.20.0
 fonttools==4.50.0
+frozenlist==1.4.1
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.137.0
+google-auth==2.32.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+grpcio==1.65.1
+grpcio-status==1.62.2
 gunicorn==21.2.0
+httplib2==0.22.0
 idna==3.7
 ipykernel==6.29.3
 ipython==8.22.2
 jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 jupyter_client==8.6.1
@@ -33,50 +51,71 @@ jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
 kaggle==1.6.12
 kiwisolver==1.4.5
+langchain==0.2.10
+langchain-core==0.2.22
+langchain-google-genai==1.0.7
+langchain-text-splitters==0.2.2
+langsmith==0.1.93
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
 mistune==3.0.2
+multidict==6.0.5
 nbclient==0.10.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==1.26.4
 openpyxl==3.1.3
+orjson==3.10.6
 packaging==24.0
 pandas==2.2.1
 pandocfilters==1.5.1
 parso==0.8.3
+pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
 prompt-toolkit==3.0.43
+proto-plus==1.24.0
+protobuf==4.25.3
 psutil==5.9.8
+ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.8.2
+pydantic_core==2.20.1
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 pytz==2024.1
+PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.35.1
 requests==2.31.0
 rpds-py==0.18.1
+rsa==4.9
 scikit-learn==1.4.2
 scipy==1.13.0
 seaborn==0.13.2
 six==1.16.0
 soupsieve==2.5
+SQLAlchemy==2.0.31
 sqlparse==0.4.4
 stack-data==0.6.3
+tenacity==8.5.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
 tinycss2==1.3.0
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.2
+typing_extensions==4.12.2
 tzdata==2024.1
-unicorn==2.0.1.post1
+uritemplate==4.1.1
 urllib3==2.2.1
 wcwidth==0.2.13
 webencodings==0.5.1
 whitenoise==6.6.0
 wordcloud==1.9.3
+yarl==1.9.4
