--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,47 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
+anyio==4.4.0
 appnope==0.1.4
 asgiref==3.8.1
 asttokens==2.4.1
 attrs==23.2.0
+backoff==2.2.1
+bcrypt==4.1.3
 beautifulsoup4==4.12.3
 bleach==6.1.0
+build==1.2.1
 cachetools==5.4.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+chroma-hnswlib==0.7.5
+chromadb==0.5.4
+click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
 comm==0.2.2
 contourpy==1.2.0
 cycler==0.12.1
+dataclasses-json==0.6.7
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.14
 Django==5.0.3
 django-jazzmin==2.6.1
+dnspython==2.6.1
+email_validator==2.2.0
 emoji==2.11.0
 et-xmlfile==1.1.0
 executing==2.0.1
+fastapi==0.111.1
+fastapi-cli==0.0.4
 fastjsonschema==2.20.0
+filelock==3.15.4
+flatbuffers==24.3.25
 fonttools==4.50.0
 frozenlist==1.4.1
+fsspec==2024.6.1
 google-ai-generativelanguage==0.6.6
 google-api-core==2.19.1
 google-api-python-client==2.137.0
@@ -35,8 +52,16 @@ googleapis-common-protos==1.63.2
 grpcio==1.65.1
 grpcio-status==1.62.2
 gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.5
 httplib2==0.22.0
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.24.0
+humanfriendly==10.0
 idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
 ipykernel==6.29.3
 ipython==8.22.2
 jedi==0.19.1
@@ -51,23 +76,45 @@ jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
 kaggle==1.6.12
 kiwisolver==1.4.5
+kubernetes==30.1.0
 langchain==0.2.10
+langchain-community==0.2.9
 langchain-core==0.2.22
 langchain-google-genai==1.0.7
 langchain-pinecone==0.1.2
 langchain-text-splitters==0.2.2
 langsmith==0.1.93
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.3
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==3.0.2
+mmh3==4.1.0
+monotonic==1.6
+mpmath==1.3.0
 multidict==6.0.5
+mypy-extensions==1.0.0
 nbclient==0.10.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.18.1
 openpyxl==3.1.3
+opentelemetry-api==1.25.0
+opentelemetry-exporter-otlp-proto-common==1.25.0
+opentelemetry-exporter-otlp-proto-grpc==1.25.0
+opentelemetry-instrumentation==0.46b0
+opentelemetry-instrumentation-asgi==0.46b0
+opentelemetry-instrumentation-fastapi==0.46b0
+opentelemetry-proto==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
+opentelemetry-util-http==0.46b0
 orjson==3.10.6
+overrides==7.7.0
 packaging==24.0
 pandas==2.2.1
 pandocfilters==1.5.1
@@ -77,6 +124,7 @@ pillow==10.2.0
 pinecone-client==4.1.2
 pinecone-plugin-interface==0.0.7
 platformdirs==4.2.0
+posthog==3.5.0
 prompt-toolkit==3.0.43
 proto-plus==1.24.0
 protobuf==4.25.3
@@ -89,37 +137,58 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.17.2
 pyparsing==3.1.2
+pypdf==4.3.1
+PyPika==0.48.9
+pyproject_hooks==1.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.9
 python-slugify==8.0.4
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.35.1
 requests==2.31.0
+requests-oauthlib==2.0.0
+rich==13.7.1
 rpds-py==0.18.1
 rsa==4.9
 scikit-learn==1.4.2
 scipy==1.13.0
 seaborn==0.13.2
+setuptools==71.1.0
+shellingham==1.5.4
 six==1.16.0
+sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.31
 sqlparse==0.4.4
 stack-data==0.6.3
+starlette==0.37.2
+sympy==1.13.1
 tenacity==8.5.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
 tinycss2==1.3.0
+tokenizers==0.19.1
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.2
+typer==0.12.3
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+uvicorn==0.30.3
+uvloop==0.19.0
+watchfiles==0.22.0
 wcwidth==0.2.13
 webencodings==0.5.1
+websocket-client==1.8.0
+websockets==12.0
 whitenoise==6.6.0
 wordcloud==1.9.3
+wrapt==1.16.0
 yarl==1.9.4
+zipp==3.19.2
