--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
+config_pkg==1.1.5
 contourpy==1.2.0
 cycler==0.12.1
 dataclasses-json==0.6.7
@@ -27,7 +28,9 @@ debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.14
+diff-match-patch==20230430
 Django==5.0.3
+django-import-export==4.1.1
 django-jazzmin==2.6.1
 dnspython==2.6.1
 email_validator==2.2.0
@@ -96,6 +99,8 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
+mysql-connector-python==9.0.0
+mysqlclient==2.2.4
 nbclient==0.10.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
@@ -166,6 +171,7 @@ sqlparse==0.4.4
 stack-data==0.6.3
 starlette==0.37.2
 sympy==1.13.1
+tablib==3.5.0
 tenacity==8.5.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
