--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,6 @@ cachetools==5.4.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.6
-chromadb==0.5.5
 click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
@@ -153,6 +152,7 @@ pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.35.1
+regex==2024.7.24
 requests==2.31.0
 requests-oauthlib==2.0.0
 rich==13.7.1
@@ -175,6 +175,7 @@ tablib==3.5.0
 tenacity==8.5.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
+tiktoken==0.7.0
 tinycss2==1.3.0
 tokenizers==0.19.1
 tornado==6.4
@@ -198,4 +199,3 @@ wordcloud==1.9.3
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.19.2
-pysqlite3
