--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.33.0
 aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
@@ -9,18 +10,21 @@ attrs==23.2.0
 backoff==2.2.1
 bcrypt==4.1.3
 beautifulsoup4==4.12.3
+bitsandbytes==0.42.0
 bleach==6.1.0
 build==1.2.1
 cachetools==5.4.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.6
+chromadb==0.5.5
 click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
 config_pkg==1.1.5
 contourpy==1.2.0
+ctransformers==0.2.27
 cycler==0.12.1
 dataclasses-json==0.6.7
 debugpy==1.8.1
@@ -103,6 +107,7 @@ mysqlclient==2.2.4
 nbclient==0.10.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.3
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.18.1
@@ -135,6 +140,7 @@ protobuf==4.25.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py-cpuinfo==9.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pydantic==2.8.2
@@ -158,9 +164,11 @@ requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.18.1
 rsa==4.9
+safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
 seaborn==0.13.2
+sentence-transformers==3.0.1
 setuptools==71.1.0
 shellingham==1.5.4
 six==1.16.0
@@ -178,9 +186,11 @@ threadpoolctl==3.5.0
 tiktoken==0.7.0
 tinycss2==1.3.0
 tokenizers==0.19.1
+torch==2.4.0
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.2
+transformers==4.43.3
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
