--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ cachetools==5.4.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.6
-chromadb==0.5.5
+chromadb==0.6.2
 click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
@@ -44,16 +44,17 @@ fastapi==0.111.1
 fastapi-cli==0.0.4
 fastjsonschema==2.20.0
 filelock==3.15.4
+filetype==1.2.0
 flatbuffers==24.3.25
 fonttools==4.50.0
 frozenlist==1.4.1
 fsspec==2024.6.1
-google-ai-generativelanguage==0.6.6
+google-ai-generativelanguage==0.6.10
 google-api-core==2.19.1
 google-api-python-client==2.137.0
 google-auth==2.32.0
 google-auth-httplib2==0.2.0
-google-generativeai==0.7.2
+google-generativeai==0.8.3
 googleapis-common-protos==1.63.2
 grpcio==1.65.1
 grpcio-status==1.62.2
@@ -63,6 +64,7 @@ httpcore==1.0.5
 httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
+httpx-sse==0.4.0
 huggingface-hub==0.24.0
 humanfriendly==10.0
 idna==3.7
@@ -83,13 +85,14 @@ jupyterlab_pygments==0.3.0
 kaggle==1.6.12
 kiwisolver==1.4.5
 kubernetes==30.1.0
-langchain==0.2.11
-langchain-community==0.2.9
-langchain-core==0.2.23
-langchain-google-genai==1.0.8
+langchain==0.3.14
+langchain-community==0.3.14
+langchain-core==0.3.29
+langchain-experimental==0.3.4
+langchain-google-genai==2.0.8
 langchain-pinecone==0.1.2
-langchain-text-splitters==0.2.2
-langsmith==0.1.93
+langchain-text-splitters==0.3.5
+langsmith==0.2.10
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
@@ -144,6 +147,7 @@ py-cpuinfo==9.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pydantic==2.8.2
+pydantic-settings==2.7.1
 pydantic_core==2.20.1
 Pygments==2.17.2
 pyparsing==3.1.2
@@ -161,6 +165,7 @@ referencing==0.35.1
 regex==2024.7.24
 requests==2.31.0
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
 rich==13.7.1
 rpds-py==0.18.1
 rsa==4.9
