--- a/requirements.txt
+++ b/requirements.txt
@@ -85,14 +85,14 @@ jupyterlab_pygments==0.3.0
 kaggle==1.6.12
 kiwisolver==1.4.5
 kubernetes==30.1.0
-langchain==0.3.14
-langchain-community==0.3.14
-langchain-core==0.3.29
-langchain-experimental==0.3.4
-langchain-google-genai==2.0.8
-langchain-pinecone==0.1.2
-langchain-text-splitters==0.3.5
-langsmith==0.2.10
+langchain
+langchain-community
+langchain-core
+langchain-experimental
+langchain-google-genai
+langchain-pinecone
+langchain-text-splitters
+langsmith
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
