--- a/requirements.txt
+++ b/requirements.txt
@@ -1,216 +1,145 @@
-accelerate==0.33.0
-aiohttp==3.9.5
-aiosignal==1.3.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.4.0
-appnope==0.1.4
+anyio==4.8.0
 asgiref==3.8.1
-asttokens==2.4.1
-attrs==23.2.0
+attrs==24.3.0
 backoff==2.2.1
-bcrypt==4.1.3
-beautifulsoup4==4.12.3
-bitsandbytes==0.42.0
-bleach==6.1.0
-build==1.2.1
-cachetools==5.4.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
+bcrypt==4.2.1
+build==1.2.2.post1
+cachetools==5.5.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
 chromadb==0.6.2
-click==8.1.7
-colorama==0.4.6
+click==8.1.8
 coloredlogs==15.0.1
-comm==0.2.2
-config_pkg==1.1.5
-contourpy==1.2.0
-ctransformers==0.2.27
+contourpy==1.3.1
 cycler==0.12.1
 dataclasses-json==0.6.7
-debugpy==1.8.1
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-diff-match-patch==20230430
-Django==5.0.3
-django-import-export==4.1.1
-django-jazzmin==2.6.1
-dnspython==2.6.1
-email_validator==2.2.0
-emoji==2.11.0
-et-xmlfile==1.1.0
-executing==2.0.1
-fastapi==0.111.1
-fastapi-cli==0.0.4
-fastjsonschema==2.20.0
-filelock==3.15.4
+Deprecated==1.2.15
+diff-match-patch==20241021
+Django==5.1.4
+django-import-export==4.3.3
+durationpy==0.9
+emoji==2.14.0
+fastapi==0.115.6
+filelock==3.16.1
 filetype==1.2.0
-flatbuffers==24.3.25
-fonttools==4.50.0
-frozenlist==1.4.1
-fsspec==2024.6.1
+flatbuffers==24.12.23
+fonttools==4.55.3
+frozenlist==1.5.0
+fsspec==2024.12.0
 google-ai-generativelanguage==0.6.10
-google-api-core==2.19.1
-google-api-python-client==2.137.0
-google-auth==2.32.0
+google-api-core==2.24.0
+google-api-python-client==2.158.0
+google-auth==2.37.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.8.3
-googleapis-common-protos==1.63.2
-grpcio==1.65.1
-grpcio-status==1.62.2
-gunicorn==21.2.0
+googleapis-common-protos==1.66.0
+grpcio==1.69.0
+grpcio-status==1.69.0
 h11==0.14.0
-httpcore==1.0.5
+httpcore==1.0.7
 httplib2==0.22.0
-httptools==0.6.1
-httpx==0.27.0
+httptools==0.6.4
+httpx==0.28.1
 httpx-sse==0.4.0
-huggingface-hub==0.24.0
+huggingface-hub==0.27.1
 humanfriendly==10.0
-idna==3.7
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
-ipykernel==6.29.3
-ipython==8.22.2
-jedi==0.19.1
-Jinja2==3.1.4
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.5.2
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-kaggle==1.6.12
-kiwisolver==1.4.5
-kubernetes==30.1.0
-langchain
-langchain-community
-langchain-core
-langchain-experimental
-langchain-google-genai
-langchain-pinecone
-langchain-text-splitters
-langsmith
+kiwisolver==1.4.8
+kubernetes==31.0.0
+langchain==0.3.14
+langchain-community==0.3.14
+langchain-core==0.3.29
+langchain-google-genai==2.0.8
+langchain-text-splitters==0.3.5
+langsmith==0.2.10
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.3
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
+marshmallow==3.25.1
+matplotlib==3.10.0
 mdurl==0.1.2
-mistune==3.0.2
-mmh3==4.1.0
+mmh3==5.0.1
 monotonic==1.6
 mpmath==1.3.0
-multidict==6.0.5
+multidict==6.1.0
 mypy-extensions==1.0.0
-mysql-connector-python==9.0.0
-mysqlclient==2.2.4
-nbclient==0.10.0
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.3
-numpy==1.26.4
+numpy==2.2.1
 oauthlib==3.2.2
-onnxruntime==1.18.1
-openpyxl==3.1.3
-opentelemetry-api==1.25.0
-opentelemetry-exporter-otlp-proto-common==1.25.0
-opentelemetry-exporter-otlp-proto-grpc==1.25.0
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-asgi==0.46b0
-opentelemetry-instrumentation-fastapi==0.46b0
-opentelemetry-proto==1.25.0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-util-http==0.46b0
-orjson==3.10.6
+onnxruntime==1.20.1
+opentelemetry-api==1.29.0
+opentelemetry-exporter-otlp-proto-common==1.29.0
+opentelemetry-exporter-otlp-proto-grpc==1.29.0
+opentelemetry-instrumentation==0.50b0
+opentelemetry-instrumentation-asgi==0.50b0
+opentelemetry-instrumentation-fastapi==0.50b0
+opentelemetry-proto==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
+opentelemetry-util-http==0.50b0
+orjson==3.10.14
 overrides==7.7.0
-packaging==24.0
-pandas==2.2.1
-pandocfilters==1.5.1
-parso==0.8.3
-pexpect==4.9.0
-pillow==10.2.0
-pinecone-client==4.1.2
-pinecone-plugin-interface==0.0.7
-platformdirs==4.2.0
-posthog==3.5.0
-prompt-toolkit==3.0.43
-proto-plus==1.24.0
-protobuf==4.25.3
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pydantic==2.8.2
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+posthog==3.7.5
+propcache==0.2.1
+proto-plus==1.25.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.5
 pydantic-settings==2.7.1
-pydantic_core==2.20.1
-Pygments==2.17.2
-pyparsing==3.1.2
-pypdf==4.3.1
+pydantic_core==2.27.2
+Pygments==2.19.1
+pyparsing==3.2.1
+pypdf==5.1.0
 PyPika==0.48.9
-pyproject_hooks==1.1.0
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-multipart==0.0.9
-python-slugify==8.0.4
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==25.1.2
-referencing==0.35.1
-regex==2024.7.24
-requests==2.31.0
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-rich==13.7.1
-rpds-py==0.18.1
+rich==13.9.4
 rsa==4.9
-safetensors==0.4.3
-scikit-learn==1.4.2
-scipy==1.13.0
+scikit-learn==1.6.1
+scipy==1.15.1
 seaborn==0.13.2
-sentence-transformers==3.0.1
-setuptools==71.1.0
 shellingham==1.5.4
-six==1.16.0
+six==1.17.0
 sniffio==1.3.1
-soupsieve==2.5
-SQLAlchemy==2.0.31
-sqlparse==0.4.4
-stack-data==0.6.3
-starlette==0.37.2
-sympy==1.13.1
-tablib==3.5.0
-tenacity==8.5.0
-text-unidecode==1.3
+SQLAlchemy==2.0.37
+sqlparse==0.5.3
+starlette==0.41.3
+sympy==1.13.3
+tablib==3.7.0
+tenacity==9.0.0
 threadpoolctl==3.5.0
-tiktoken==0.7.0
-tinycss2==1.3.0
-tokenizers==0.19.1
-torch==2.4.0
-tornado==6.4
-tqdm==4.66.4
-traitlets==5.14.2
-transformers==4.43.3
-typer==0.12.3
+tokenizers==0.21.0
+tqdm==4.67.1
+typer==0.15.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2024.1
+tzdata==2024.2
 uritemplate==4.1.1
-urllib3==2.2.1
-uvicorn==0.30.3
-uvloop==0.19.0
-watchfiles==0.22.0
-wcwidth==0.2.13
-webencodings==0.5.1
+urllib3==2.3.0
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.4
 websocket-client==1.8.0
-websockets==12.0
-whitenoise==6.6.0
-wordcloud==1.9.3
-wrapt==1.16.0
-yarl==1.9.4
-zipp==3.19.2
+websockets==14.1
+whitenoise==6.8.2
+wordcloud==1.9.4
+wrapt==1.17.1
+yarl==1.18.3
+zipp==3.21.0
