--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 kiwisolver==1.4.8
 kubernetes==31.0.0
-langchain==0.3.14
+langchain>=0.3.14
 langchain-community==0.3.14
 langchain-core==0.3.29
 langchain-google-genai==2.0.8
@@ -71,7 +71,7 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
-numpy==2.2.1
+numpy>=1.23.0,<2.0
 oauthlib==3.2.2
 onnxruntime==1.20.1
 opentelemetry-api==1.29.0
