--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,19 @@ annotated-types==0.7.0
 anyio==4.8.0
 asgiref==3.8.1
 attrs==24.3.0
+Authlib==1.3.1
 backoff==2.2.1
 bcrypt==4.2.1
 build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
-chromadb==0.6.2
 click==8.1.8
 coloredlogs==15.0.1
 contourpy==1.3.1
+cryptography==44.0.0
 cycler==0.12.1
 dataclasses-json==0.6.7
 Deprecated==1.2.15
@@ -39,7 +41,10 @@ google-auth-httplib2==0.2.0
 google-generativeai==0.8.3
 googleapis-common-protos==1.66.0
 grpcio==1.69.0
+grpcio-health-checking==1.69.0
 grpcio-status==1.69.0
+grpcio-tools==1.69.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
@@ -56,7 +61,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 kiwisolver==1.4.8
 kubernetes==31.0.0
-langchain>=0.3.14
+langchain==0.3.14
 langchain-community==0.3.14
 langchain-core==0.3.29
 langchain-google-genai==2.0.8
@@ -71,7 +76,7 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
-numpy>=1.23.0,<2.0
+numpy==2.2.1
 oauthlib==3.2.2
 onnxruntime==1.20.1
 opentelemetry-api==1.29.0
@@ -89,12 +94,16 @@ overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+pinecone==5.4.2
+pinecone-plugin-inference==3.1.0
+pinecone-plugin-interface==0.0.7
 posthog==3.7.5
 propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.10.5
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
@@ -115,6 +124,7 @@ rsa==4.9
 scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
+setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -135,6 +145,7 @@ uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
+validators==0.34.0
 watchfiles==1.0.4
 websocket-client==1.8.0
 websockets==14.1
